
	* bin/IgProfAnalyse.cc:	I slightly changed the --show-pages option
	  to count all the pages, even if they are in the middle of an
	  allocation. --show-partial-pages uses the old metrics.
	  Notice also that the output now reports MEM_LIVE@PAGES or
	  MEM_LIVE@PARTIAL_PAGES rather than just MEM_LIVE when either
	  --show-pages or --show-partial-pages is reported.

2010-01-11  Giulio Eulisse <giulio.eulisse@cern.ch>

	* bin/IgProfAnalyse.cc: Add 64 bit support for allocation position
	  (LK).
	  
	  bin/IgProfAnalyse.cc: Add --show-pages option which shows
	  information about memory fragmentation rather than the actual memory
	  counter. This means that we track the not-completely-allocated pages
	  that each node in the calltree produces.

	  Notice that this means that an allocation of 2MB has the same
	  cost of an allocation of 5KB or two allocation of 1B that are on
	  different pages.

	  Moreover 4096 allocations of 1B have the same cost of 1
	  allocation of 1B, if they are continuos (i.e. pooled
	  allocation are considered good).

	  The above is implemented by storing in `Counter::cnt`
	  the number of pages touched, rather than the value for
	  the counter. This is not exactly what you want to see
	  in particular the results can be misleading when
	  aggregating calltree nodes, but already gives some good
	  information.

	  Option --show-pages always uses counter "MEM_LIVE"
	  and its incompatible with -r and --show-calls
	  options, at least for the time being.

2010-01-08  Giulio Eulisse <giulio.eulisse@cern.ch>

	* bin/IgProfAnalyse.cc, bin/IgProfAnalyse.h: code changed so that
	  it is decided a priori which counter igprof-analyse will be reporting
	  about and it will ignore all the others. This means that we can get
	  rid of the ring buffer that was getting used to keep track of a random
	  number of counters, therefore simplifing a lot the Counter class and
	  removing all the loops required to navigate rings. The methods